--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -3,7 +3,14 @@
   padding-bottom: 64px;
 }
 
-.maxWidthWrapper {
+.characterEditor::before {
+  content: '';
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 40%;
+  background-color: hsl(195deg, 20%, 86%);
 }
 
 .header {
@@ -34,4 +41,5 @@
 
 .controlColumn {
   max-width: 50%;
+  isolation: isolate;
 }
