--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -33,6 +33,7 @@
 
 .characterWrapper {
   position: fixed;
+  top: 128px; /* matches characterEditor padding-top*/
   bottom: 0;
   right: 0;
   width: 35%;
