--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -58,6 +58,12 @@
   min-height: 500px;
 }
 
+@media (max-width: 1280px) {
+  .characterWrapper {
+    width: 45%;
+  }
+}
+
 .controlColumn {
   max-width: 50%;
   isolation: isolate;
