--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -3,6 +3,12 @@
   padding-bottom: 64px;
 }
 
+@media (max-width: 600px) {
+  .characterEditor {
+    padding-top: 64px;
+  }
+}
+
 .characterEditor::before {
   content: '';
   position: fixed;
@@ -21,6 +27,12 @@
 @media (max-width: 1280px) {
   .header {
     max-width: 50%;
+  }
+}
+
+@media (max-width: 600px) {
+  .header {
+    max-width: none;
   }
 }
 
@@ -61,6 +73,12 @@
 @media (max-width: 1280px) {
   .characterWrapper {
     width: 45%;
+  }
+}
+
+@media (max-width: 600px) {
+  .characterWrapper {
+    top: 210px;
   }
 }
 
