--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -19,6 +19,12 @@
   background-color: hsl(195deg, 20%, 86%);
 }
 
+@media (max-width: 600px) {
+  .characterEditor::before {
+    z-index: -2;
+  }
+}
+
 .header {
   padding-bottom: 64px;
   max-width: 65%;
@@ -79,10 +85,18 @@
 @media (max-width: 600px) {
   .characterWrapper {
     top: 210px;
+    left: 15%;
+    z-index: -1;
   }
 }
 
 .controlColumn {
   max-width: 50%;
   isolation: isolate;
+}
+
+@media (max-width: 600px) {
+  .controlColumn {
+    max-width: none;
+  }
 }
