--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -6,6 +6,7 @@
 @media (max-width: 600px) {
   .characterEditor {
     padding-top: 64px;
+    overflow: hidden;
   }
 }
 
@@ -97,6 +98,9 @@
 
 @media (max-width: 600px) {
   .controlColumn {
+    display: flex;
+    gap: 16px;
     max-width: none;
+    overflow: scroll;
   }
 }
