--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -5,8 +5,9 @@
 
 @media (max-width: 600px) {
   .characterEditor {
-    padding-top: 64px;
+    padding-top: 32px;
     overflow: hidden;
+    height: 85%;
   }
 }
 
@@ -85,7 +86,8 @@
 
 @media (max-width: 600px) {
   .characterWrapper {
-    top: 210px;
+    top: 32px;
+    bottom: 10%;
     left: 15%;
     z-index: -1;
   }
@@ -102,5 +104,6 @@
     gap: 16px;
     max-width: none;
     overflow: scroll;
+    margin-top: auto;
   }
 }
