turn max width wrapper into a full-height flex container @<600px

--- a/src/components/MaxWidthWrapper/MaxWidthWrapper.module.css
+++ b/src/components/MaxWidthWrapper/MaxWidthWrapper.module.css
@@ -5,3 +5,12 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+
+@media (max-width: 600px) {
+  .maxWidthWrapper {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+}
