Exercise 5: Implement mobile variant (#6)
* set new font sizes and max-width to header @1280px

* increase character wrapper width on <1280px

* apply header and character editor positioning styling @600px

* position character wrapper beneath control panels

* convert panels into a scrollable row with a little gap

* adjust footer height and padding @600px

* hide header @<600px

* adjust character editor positioning and lower screen padding

* turn max width wrapper into a full-height flex container @<600px

* footer now is constraint by a min-height instead of fixed height

--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -3,6 +3,14 @@
   padding-bottom: 64px;
 }
 
+@media (max-width: 600px) {
+  .characterEditor {
+    padding-top: 32px;
+    overflow: hidden;
+    height: 85%;
+  }
+}
+
 .characterEditor::before {
   content: '';
   position: fixed;
@@ -13,9 +21,27 @@
   background-color: hsl(195deg, 20%, 86%);
 }
 
+@media (max-width: 600px) {
+  .characterEditor::before {
+    z-index: -2;
+  }
+}
+
 .header {
   padding-bottom: 64px;
   max-width: 65%;
+}
+
+@media (max-width: 1280px) {
+  .header {
+    max-width: 50%;
+  }
+}
+
+@media (max-width: 600px) {
+  .header {
+    display: none;
+  }
 }
 
 .title {
@@ -26,9 +52,21 @@
   letter-spacing: -0.5px;
 }
 
+@media (max-width: 1280px) {
+  .title {
+    font-size: 2rem;
+  }
+}
+
 .description {
   font-size: 1.25rem;
   margin: 0;
+}
+
+@media (max-width: 1280px) {
+  .description {
+    font-size: 1rem;
+  }
 }
 
 .characterWrapper {
@@ -40,7 +78,32 @@
   min-height: 500px;
 }
 
+@media (max-width: 1280px) {
+  .characterWrapper {
+    width: 45%;
+  }
+}
+
+@media (max-width: 600px) {
+  .characterWrapper {
+    top: 32px;
+    bottom: 10%;
+    left: 15%;
+    z-index: -1;
+  }
+}
+
 .controlColumn {
   max-width: 50%;
   isolation: isolate;
+}
+
+@media (max-width: 600px) {
+  .controlColumn {
+    display: flex;
+    gap: 16px;
+    max-width: none;
+    overflow: scroll;
+    margin-top: auto;
+  }
 }
